[package]
name = "protonvpn-transmission-natpmp"
version = "1.0.1"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.43.0", default-features = false, features = ["rt", "macros", "signal", "time"] }
futures = "0.3.31"
backon = "1.4.0"
natpmp = { version = "0.5.0", features = ["tokio"] }
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
log = "0.4"
fern = "0.7.1"
transmission-rpc = "0.5.0"

[profile.release]
strip = true
